# treeboard

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-05-17-treeboard-productization.md  2026-05-18-chunk-a-backend.md  2026-05-18-chunk-b-control-center.md  2026-05-18-chunk-c-ai-features.md  2026-05-18-chunk-d-git-integration.md  2026-05-18-chunk-e-visual-modes.md  2026-05-18-chunk-f-persistence.md  2026-05-18-chunk-g-minimap-tabs.md  2026-05-18-popover-phase-1-state-and-chrome.md  2026-05-18-treeboard-launch-film.md  2026-05-19-arboviz-auth-onboarding.md  2026-05-20-arboviz-v2-agent-cockpit.md  2026-05-20-arboviz-v2.1-chrome-redesign.md
docs/superpowers/specs/: 2026-05-18-popover-overhaul-design.md  2026-05-18-treeboard-launch-film-design.md  2026-05-18-vibe-coder-features-design.md  2026-05-19-arboviz-auth-onboarding-design.md  2026-05-20-arboviz-v2-agent-cockpit-design.md  arboviz-brand-design-spec.md
scripts/launch-film/: .asset-urls  generate_clip.py  generate_clip_seedance.py  generate_element.py  kie_client.sh  review_clip.py
src/arboviz/: __main__.py  cli.py  git_diff_stat.py  graph.py  imports.py  install.py  lock.py  meta.py  persist.py  server.py  session.py  watcher.py  window.py
src/arboviz/skills/arboviz/: SKILL.md
src/arboviz/static/: agent-pills.js  agent-state.js  arboviz.css  arboviz.js  bookmarks.js  control-center.js  dep-ripple.js  diff-badge.js  graph-overlay.js  history-clock.js  index.html  layout.js  live-status.js  live.js  multiselect.js  popover.js  project-tabs.js  scan-beam.js  search-content.js  state.js  timeline.js  window-bridge.js
src/arboviz/static/popover/: diff.js  index.js  positioning.js  theme.js
src/treeboard/: __main__.py  cli.py  git.py  meta.py  persist.py  render.py  scan.py  search.py  server.py  watcher.py
src/treeboard/static/: bookmarks.js  camera.js  context.js  control-center.js  git-overlay.js  graph-overlay.js  heatmap.js  index.html  layout.js  minimap.js  multiselect.js  palette.js  popover.js  project-tabs.js  render.js  search-content.js  token-badge.js  treeboard.css  treeboard.js
src/treeboard/static/popover/: body.js  chrome.js  index.js  notes.js  registry.js  resize.js  sizes.js  theme.js  utils.js
tests/: conftest.py  test_agent_cli.py  test_agent_server.py  test_cli.py  test_git.py  test_git_diff_stat.py  test_graph.py  test_imports.py  test_lock.py  test_meta.py  test_persist.py  test_render.py  test_scan.py  test_search.py  test_server.py  test_server_new.py  test_session_persist.py  test_watcher.py
tests/e2e/: test_canvas_states.py  test_chrome_redesign.py
tests/static/popover/: test_registry.mjs  test_sizes.mjs
