[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "treeboard"
version = "0.1.0"
description = "Cinematic pyramid visualiser for any directory tree."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pathspec>=0.12",
  "watchdog>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "pytest-asyncio>=0.23",
]

[project.scripts]
treeboard = "treeboard.cli:main"

[tool.hatch.build]
include = [
  "src/treeboard/**/*.py",
  "src/treeboard/static/**/*",
]

[tool.hatch.build.targets.wheel]
packages = ["src/treeboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
