[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arboviz"
version = "0.1.0"
description = "Cinematic pyramid visualiser for any directory tree."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Heidar Babazade", email = "smbbaba06@gmail.com" },
]
keywords = ["directory", "tree", "visualiser", "file-browser", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pathspec>=0.12",
  "watchdog>=4.0",
]

[project.urls]
Homepage = "https://github.com/heidar-droid/arboviz"
Repository = "https://github.com/heidar-droid/arboviz"
"Bug Tracker" = "https://github.com/heidar-droid/arboviz/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "pytest-asyncio>=0.23",
]

[project.scripts]
arboviz = "arboviz.cli:main"

[tool.hatch.build]
include = [
  "src/arboviz/**/*.py",
  "src/arboviz/static/**/*",
]

[tool.hatch.build.targets.wheel]
packages = ["src/arboviz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
