[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arboviz"
version = "2.0.0"
description = "Visual cockpit for Claude Code — spatial canvas showing live agent file activity."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Heidar Babazade", email = "smbbaba06@gmail.com" },
]
keywords = ["directory", "tree", "visualiser", "file-browser", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pathspec>=0.12",
  "watchdog>=4.0",
]

[project.urls]
Homepage = "https://github.com/heidar-droid/arboviz"
Repository = "https://github.com/heidar-droid/arboviz"
"Bug Tracker" = "https://github.com/heidar-droid/arboviz/issues"

[project.optional-dependencies]
native = ["pywebview>=5.0"]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "pytest-asyncio>=0.23",
  "playwright>=1.40",
  "pytest-playwright>=0.4",
]

[project.scripts]
arboviz = "arboviz.cli:main"
arboviz-install = "arboviz.install:install_skill"

[tool.hatch.build]
include = [
  "src/arboviz/**/*.py",
  "src/arboviz/static/**/*",
  "src/arboviz/skills/**/*",
]

[tool.hatch.build.targets.wheel]
packages = ["src/arboviz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
